tests/it/wire/snapshots/it__wire__gemini__response_format_json_schema.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
{
  "body": {
    "contents": [
      {
        "parts": [
          {
            "text": "Give me the city and its population."
          }
        ],
        "role": "user"
      }
    ],
    "generationConfig": {
      "maxOutputTokens": 128,
      "responseJsonSchema": {
        "additionalProperties": false,
        "properties": {
          "city": {
            "type": "string"
          },
          "population": {
            "type": "integer"
          }
        },
        "required": [
          "city",
          "population"
        ],
        "type": "object"
      },
      "responseMimeType": "application/json"
    },
    "safetySettings": [
      {
        "category": "HARM_CATEGORY_DANGEROUS_CONTENT",
        "threshold": "BLOCK_ONLY_HIGH"
      }
    ]
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "content-length",
      "438"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ],
    [
      "x-goog-api-key",
      "[redacted]"
    ]
  ],
  "method": "POST",
  "path": "/v1beta/models/gemini-2.5-pro-002:generateContent"
}
