tests/it/wire/snapshots/it__wire__gemini__stream_transcript_assigns_one_block_per_run-2.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
[
  {
    "id": "resp-gemini-stream",
    "type": "started"
  },
  {
    "id": "reasoning-0",
    "kind": {
      "type": "reasoning"
    },
    "type": "content_block_start"
  },
  {
    "id": "reasoning-0",
    "text": "Let me check",
    "type": "reasoning_delta"
  },
  {
    "type": "usage",
    "usage": {
      "cache_read": 6,
      "cache_write": 0,
      "input": 12,
      "output": 5,
      "reasoning": 0
    }
  },
  {
    "id": "reasoning-0",
    "text": " the forecast.",
    "type": "reasoning_delta"
  },
  {
    "id": "reasoning-0",
    "part": {
      "signature": "sig-stream-think",
      "signature_origin": "gemini",
      "text": "Let me check the forecast.",
      "type": "reasoning"
    },
    "type": "content_block_end"
  },
  {
    "id": "text-0",
    "kind": {
      "type": "text"
    },
    "type": "content_block_start"
  },
  {
    "id": "text-0",
    "text": "Checking",
    "type": "text_delta"
  },
  {
    "id": "text-0",
    "text": " now.",
    "type": "text_delta"
  },
  {
    "id": "text-0",
    "part": {
      "text": "Checking now.",
      "type": "text"
    },
    "type": "content_block_end"
  },
  {
    "id": "tool-0",
    "kind": {
      "id": "get_weather-0-resp-gemini-stream",
      "kind": "function",
      "name": "get_weather",
      "type": "tool_call"
    },
    "type": "content_block_start"
  },
  {
    "id": "tool-0",
    "part": {
      "id": "get_weather-0-resp-gemini-stream",
      "input": {
        "type": "function",
        "value": "{\"city\":\"Paris\"}"
      },
      "name": "get_weather",
      "provider_metadata": {
        "gemini": {
          "thoughtSignature": "sig-stream-call"
        }
      },
      "type": "tool_call"
    },
    "type": "content_block_end"
  },
  {
    "type": "usage",
    "usage": {
      "cache_read": 6,
      "cache_write": 0,
      "input": 12,
      "output": 14,
      "reasoning": 9
    }
  },
  {
    "response": {
      "content": [
        {
          "signature": "sig-stream-think",
          "signature_origin": "gemini",
          "text": "Let me check the forecast.",
          "type": "reasoning"
        },
        {
          "text": "Checking now.",
          "type": "text"
        },
        {
          "id": "get_weather-0-resp-gemini-stream",
          "input": {
            "type": "function",
            "value": "{\"city\":\"Paris\"}"
          },
          "name": "get_weather",
          "provider_metadata": {
            "gemini": {
              "thoughtSignature": "sig-stream-call"
            }
          },
          "type": "tool_call"
        }
      ],
      "finish_reason": "tool_call",
      "id": "resp-gemini-stream",
      "model": {
        "model": "gemini-3.1-pro",
        "provider": "gemini"
      },
      "usage": {
        "cache_read": 6,
        "cache_write": 0,
        "input": 12,
        "output": 14,
        "reasoning": 9
      }
    },
    "type": "ended"
  }
]
