tests/it/wire/snapshots/it__wire__gemini__tool_choice_none.snap
---
source: tests/it/wire/gemini.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/v1beta/models/gemini-2.5-pro-002:generateContent",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "content-length",
      "737"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ],
    [
      "x-goog-api-key",
      "[redacted]"
    ]
  ],
  "body": {
    "systemInstruction": {
      "parts": [
        {
          "text": "Use the tools when they help."
        }
      ]
    },
    "contents": [
      {
        "role": "user",
        "parts": [
          {
            "text": "What is the weather in Paris?"
          }
        ]
      }
    ],
    "generationConfig": {
      "maxOutputTokens": 128
    },
    "tools": [
      {
        "functionDeclarations": [
          {
            "name": "get_weather",
            "description": "Reads the current weather for a city",
            "parametersJsonSchema": {
              "type": "object",
              "properties": {
                "city": {
                  "type": "string"
                }
              },
              "required": [
                "city"
              ]
            }
          },
          {
            "name": "get_time",
            "description": "Reads the current time in a time zone",
            "parametersJsonSchema": {
              "type": "object",
              "properties": {
                "zone": {
                  "type": "string"
                }
              },
              "required": [
                "zone"
              ]
            }
          }
        ]
      }
    ],
    "toolConfig": {
      "functionCallingConfig": {
        "mode": "NONE"
      }
    },
    "safetySettings": [
      {
        "category": "HARM_CATEGORY_DANGEROUS_CONTENT",
        "threshold": "BLOCK_ONLY_HIGH"
      }
    ]
  }
}
